# fuzzy

./: .gitignore  Cargo.toml  LICENSE  README.md  plan-blocks.md  plan-blocks.schema.json
docs/: ARCHITECTURE.md  FINAL_SUMMARY.md
examples/: demo.sh
schemas/: evidence_ledger.schema.json  handoff.schema.json  hypothesis_ledger.schema.json  open_questions.schema.json  run.schema.json
src/: adapters.rs  approval.rs  budget.rs  chat.rs  commands.rs  context.rs  main.rs  models.rs  ops.rs  owl.rs  protocol.rs  redaction.rs  render.rs  repl.rs  store.rs  transcript.rs  util.rs
src/llm/: mock.rs  mod.rs  ollama.rs
src/tools/: builtin.rs  mod.rs  runtime.rs
templates/: decision_record.md  diagnosis_report.md  investigation_report.md
templates/prompts/: fuzzy_orchestrator.md
tests/: chat_phase1.rs  chat_phase2.rs  chat_phase3.rs  chat_phase4.rs  chat_phase5.rs  chat_phase6.rs  chat_phase7.rs  cli_baseline.rs
